# parula

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md  _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  appveyor.yml  autotoc_md0.html  bintray.json.in  build.sh  build_coverty.sh  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main.cpp  main_8cpp.html  main_8cpp__incl.md5  pages.html
Graphics/: image_engine.cpp  image_engine.h  texture.cpp  texture.h
Input/: iinput_state.h  input_event.h  input_manager.cpp  input_manager.h
Input/StylusInput/: stylus.cpp  stylus.h
Modules/: imodule.h
Modules/Common/: point.h
Modules/DrawPath/: draw_path.cpp  draw_path.h
Modules/Recognition/: prediction.h  rec_worker.cpp  rec_worker.h  recognition.cpp  recognition.h
Modules/VectorGraphics/: renderer.cpp  renderer.h  shapes.h
UI/: window.cpp  window.h
search/: all_0.js  all_1.js  all_3.js  all_4.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js
